--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
   <div class="grid">
     <div class="">
       <figure>
-        <img src="images/veggie-burger-1.jpg" alt="#">
+        <img class="img-flex" src="images/veggie-burger-1.jpg" alt="#">
         <figcaption>Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</figcaption>
       </figure>
     </div>
     <div class="">
-      <img src="images/veggie-burger-2.jpg" alt="#">
-      <figcaption>Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
+      <figure>
+        <img class="img-flex" src="images/veggie-burger-2.jpg" alt="#">
+        <figcaption>Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
+      </figure>
     </div>
     <div class="">
-      <img src="images/veggie-burger-3.jpg" alt="#">
-      <figcaption>Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
+      <figure>
+        <img class="img-flex" src="images/veggie-burger-3.jpg" alt="#">
+        <figcaption>Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
+      </figure>
     </div>
   </div>
 
