Add a class of relative and aboslute to the divs and figcaptions

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
 
   <div class="grid">
-    <div class="">
+    <div class="unit relative">
       <figure>
         <img class="img-flex" src="images/veggie-burger-1.jpg" alt="#">
-        <figcaption>Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</figcaption>
+        <figcaption class="absolute">Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</figcaption>
       </figure>
     </div>
-    <div class="">
+    <div class="unit relative">
       <figure>
         <img class="img-flex" src="images/veggie-burger-2.jpg" alt="#">
-        <figcaption>Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
+        <figcaption class="absolute">Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
       </figure>
     </div>
-    <div class="">
+    <div class="unit relative">
       <figure>
         <img class="img-flex" src="images/veggie-burger-3.jpg" alt="#">
-        <figcaption>Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
+        <figcaption class="absolute">Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
       </figure>
     </div>
   </div>
