--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <figcaption class="absolute">Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
       </figure>
     </div>
-    <div class="unit relative xs-1 s-1 m-1-2 l-1-3">
+    <div class="unit relative unit-xs-hidden l-1-3">
       <figure>
         <img class="img-flex" src="images/veggie-burger-3.jpg" alt="#">
         <figcaption class="absolute">Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
